# Graduate_Capstone

./: README.md  Simulation Instruction Document Github.odt  TRR_With_Custom_Map.sh
catkin_ws_a/devel/: .catkin
catkin_ws_a/devel/include/cascade_controller/: paramsConfig.h
catkin_ws_a/devel/include/decomp_ros_msgs/: Ellipsoid.h  EllipsoidArray.h  Polyhedron.h  PolyhedronArray.h
catkin_ws_a/devel/include/quadrotor_msgs/: AuxCommand.h  Bspline.h  Corrections.h  Gains.h  Odometry.h  OptimalTimeAllocator.h  OutputData.h  PPROutputData.h  PolynomialTrajectory.h  PositionCommand.h  Replan.h  ReplanCheck.h  SO3Command.h  Serial.h  SpatialTemporalTrajectory.h  StatusData.h  SwarmCommand.h  SwarmInfo.h  SwarmOdometry.h  TRPYCommand.h  TrajectoryMatrix.h
catkin_ws_a/devel/lib/joy_ctrl/: joy_ctrl
catkin_ws_a/devel/lib/map_server/: map_server
catkin_ws_a/devel/lib/odom_visualization/: odom_visualization
catkin_ws_a/devel/lib/pkgconfig/: cascade_controller.pc  catkin_simple.pc  cmake_utils.pc  decomp_ros_msgs.pc  joy_ctrl.pc  map_server.pc  mission_template.pc  odom_visualization.pc  polyhedron_generator.pc  pose_utils.pc  quadrotor_msgs.pc  router.pc  so3_quadrotor_simulator.pc  state_machine.pc  surfel_fusion.pc  trr_global_planner.pc  uav_utils.pc  waypoint_generator.pc
catkin_ws_a/devel/lib/so3_quadrotor_simulator/: quadrotor_simulator_so3
catkin_ws_a/devel/lib/state_machine/: state_machine_node
catkin_ws_a/devel/lib/trr_global_planner/: click_obstacle_generation  random_complex  tr_node
catkin_ws_a/devel/lib/waypoint_generator/: waypoint_generator
catkin_ws_a/src/ground_station/: mapping.sh  teaching_planning.sh
catkin_ws_a/src/ground_station/joy_ctrl/: CMakeLists.txt
catkin_ws_r/src/rs-chauffeur-master/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
catkin_ws_r/src/rs-chauffeur-master/include/rs_chauffeur/: rs_chauffeur.h
catkin_ws_r/src/rs-chauffeur-master/launch/: ignite.launch
catkin_ws_r/src/rs-chauffeur-master/src/: rs_chauffeur.cpp
catkin_ws_r/src/rs4se/: CMakeLists.txt  package.xml
catkin_ws_r/src/rs4se/include/rs4se/: rs4se.h
catkin_ws_r/src/rs4se/launch/: rs4se.launch
catkin_ws_r/src/rs4se/src/: rs4se.cpp
catkin_ws_trr/devel/: .catkin
catkin_ws_trr/devel/include/decomp_ros_msgs/: Ellipsoid.h  EllipsoidArray.h  Polyhedron.h  PolyhedronArray.h
catkin_ws_trr/devel/include/quadrotor_msgs/: AuxCommand.h  Bspline.h  Corrections.h  Gains.h  Odometry.h  OptimalTimeAllocator.h  OutputData.h  PPROutputData.h  PolynomialTrajectory.h  PositionCommand.h  Replan.h  ReplanCheck.h  SO3Command.h  Serial.h  SpatialTemporalTrajectory.h  StatusData.h  SwarmCommand.h  (+4 more)
(+161 files in other folders)
